--- a/frontend/src/components/styledComponents/menuItems/components/CaseMenuItemOpen.scss
+++ b/frontend/src/components/styledComponents/menuItems/components/CaseMenuItemOpen.scss
@@ -35,7 +35,7 @@
     width: 100%;
     max-width: 100%;
     box-sizing: border-box;
-    overflow: visible;
+    overflow-x: hidden;
     padding-right: 1.75rem
 }
 
